--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -10,7 +10,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text = "Move to Register Activity"/>
+        android:text = "Move to Register Activity"
+        android:id="@+id/register_button"/>
 
 
 </android.support.constraint.ConstraintLayout>
