--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,16 +2,11 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Yo! What's up?"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text = "Move to Register Activity"
-        android:id="@+id/register_button"/>
+        android:id="@+id/reg_btn"/>
 
 
 </android.support.constraint.ConstraintLayout>
