--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -17,5 +17,13 @@
         app:layout_constraintLeft_toLeftOf="@id/root"
         app:layout_constraintRight_toRightOf="@id/root"
         app:layout_constraintTop_toTopOf="@id/root"/>
-
+    <Button
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text = "Register"
+        app:layout_constraintBottom_toBottomOf="@id/root"
+        app:layout_constraintLeft_toLeftOf="@id/root"
+        app:layout_constraintRight_toRightOf="@id/root"
+        />
 </android.support.constraint.ConstraintLayout>
