--- a/app/src/main/res/layout/user_profile_contact_container.xml
+++ b/app/src/main/res/layout/user_profile_contact_container.xml
@@ -2,19 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profile_contact_list"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="horizontal"
+    android:clickable="true"
     >
     <ImageView
         android:id="@+id/profile_image"
+        android:background="@drawable/layout_bg"
         android:src="@drawable/user_photo_fallback"
         android:layout_width="@dimen/connected_user_avatar_dimen"
         android:layout_height="@dimen/connected_user_avatar_dimen"
         />
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical">
         <TextView
             android:id="@+id/contact_first_name"
