--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -23,6 +23,12 @@
         android:id="@+id/menu"
         android:text="Main Menu"/>
     <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="@id/root"
+        android:text = "Nearby Connections"
+        android:id="@+id/nearby_connections"/>
+    <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
