--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,7 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:id="@+id/contact_list"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/contact_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:orientation="vertical"
+        android:paddingBottom="12dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_via_nfc"
+            android:layout_width="@dimen/fab_dimen"
+            android:layout_height="@dimen/fab_dimen"/>
+
+        <android.support.v4.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="12dp"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_via_qrcode"
+            android:layout_width="@dimen/fab_dimen"
+            android:layout_height="@dimen/fab_dimen"/>
+
+    </LinearLayout>
+
+</FrameLayout>
