--- a/app/src/main/res/layout/user_profile_contact_container.xml
+++ b/app/src/main/res/layout/user_profile_contact_container.xml
@@ -1,43 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/profile_contact_list"
-    android:layout_width="wrap_content"
+
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:clickable="true"
-    >
-    <ImageView
-        android:id="@+id/profile_image"
-        android:background="@drawable/layout_bg"
-        android:src="@drawable/user_photo_fallback"
-        android:layout_width="@dimen/connected_user_avatar_dimen"
-        android:layout_height="@dimen/connected_user_avatar_dimen"
-        />
+    android:layout_margin="12dp">
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/contact_first_name"
-            android:layout_marginRight="@dimen/connected_user_avatar_dimen"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:padding="12dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:hint = "First Name"
-            />
-        <TextView
-            android:id="@+id/contact_last_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Last Name"
-            android:layout_marginRight="@dimen/connected_user_avatar_dimen"/>
-        <TextView
-            android:id="@+id/email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint = "Email"
-            android:layout_marginRight="@dimen/connected_user_avatar_dimen"/>
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/full_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?android:textColorPrimary"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/company"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?android:textColorSecondary"
+                android:textSize="12sp"/>
+
+        </LinearLayout>
+
     </LinearLayout>
-</LinearLayout>
+
+</android.support.v7.widget.CardView>
