--- a/app/src/main/res/layout/activity_nearby_connections_screen.xml
+++ b/app/src/main/res/layout/activity_nearby_connections_screen.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/nearbyconnectionsbg"
-    android:orientation="vertical"
-    >
-</LinearLayout>
+    android:scaleType="centerCrop"
+    android:src="@drawable/nearbyconnectionsbg"/>
