--- a/app/src/main/res/layout/fragment_connected_user.xml
+++ b/app/src/main/res/layout/fragment_connected_user.xml
@@ -2,42 +2,54 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="24dp">
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
+            android:id="@+id/profile_image"
             android:layout_width="@dimen/connected_user_avatar_dimen"
             android:layout_height="@dimen/connected_user_avatar_dimen"
             android:layout_gravity="center_horizontal"
-            android:scaleType="centerCrop"
-            android:src="@drawable/user_photo_fallback"
-            app:riv_oval="true"/>
+            android:scaleType="centerCrop"/>
 
         <android.support.v4.widget.Space
             android:layout_width="match_parent"
             android:layout_height="16dp"/>
 
-        <include
+        <TextView
             android:id="@+id/full_name"
-            layout="@layout/connected_user_text_info"/>
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="18sp"/>
 
-        <include
+        <TextView
             android:id="@+id/company"
-            layout="@layout/connected_user_text_info"/>
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="14sp"/>
 
-        <include
+        <TextView
             android:id="@+id/email"
-            layout="@layout/connected_user_text_info"/>
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="14sp"/>
 
-        <include
+        <TextView
             android:id="@+id/phone_number"
-            layout="@layout/connected_user_text_info"/>
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="14sp"/>
 
     </LinearLayout>
 
