--- a/app/src/main/res/layout/fragment_connected_user.xml
+++ b/app/src/main/res/layout/fragment_connected_user.xml
@@ -2,6 +2,7 @@
 
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -50,6 +51,36 @@
             android:layout_height="24dp"
             android:textColor="?android:textColorPrimary"
             android:textSize="14sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:padding="24dp">
+
+            <com.mikepenz.iconics.view.IconicsImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:iiv_color="@android:color/black"
+                app:iiv_icon="cmd_twitter"
+                app:iiv_size="24dp"/>
+
+            <com.mikepenz.iconics.view.IconicsImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:iiv_color="@android:color/black"
+                app:iiv_icon="cmd-linkedin"
+                app:iiv_size="24dp"/>
+
+            <com.mikepenz.iconics.view.IconicsImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                app:iiv_color="@android:color/black"
+                app:iiv_icon="cmd_facebook"
+                app:iiv_size="24dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
