--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#4caf50</color>
-    <color name="colorPrimaryDark">#388e3c</color>
-    <color name="colorAccent">#FF5252</color>
+    <color name="colorPrimary">#FD9526</color>
+    <color name="colorPrimaryDark">#ff6201</color>
+    <color name="colorAccent">#5572F8</color>
+
+    <color name="start_screen_bg_color">#212121</color>
 
     <color name="color_green">#14808d</color>
     <color name="color_brown">#343838</color>
